# pyAutoLab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
pyautolab/: __init__.py  __main__.py  default.json
pyautolab/__pyinstaller/: hook-pyautolab.py
pyautolab/api/: __init__.py  base.py
pyautolab/api/command/: __init__.py  base.py
pyautolab/api/qt/: __init__.py
pyautolab/api/qt_helpers/: __init__.py
pyautolab/api/utility/: __init__.py
pyautolab/api/widgets/: __init__.py  base.py
pyautolab/api/window/: __init__.py  base.py  menubar.py  toolbar.py  workspace.py
pyautolab/app/: __init__.py  app.py  commands.py  main_window.py  mainwindow.py  mainwindow_ui.py  runner.py
pyautolab/app/tabs/: __init__.py  communication_monitor.py  measurement_tab.py  plugin_manager.py  run_settings_tab.py  settings_tab.py  welcome_tab.py
pyautolab/core/plugin/: __init__.py  device.py  plugin.py
pyautolab/core/qt/: __init__.py
pyautolab/core/qt/helper/: __init__.py  gui.py  layout.py  widget.py
pyautolab/core/qt/widgets/: __init__.py  alert.py  combobox.py  device_manager.py  plot_widget.py  status.py  switch.py  table.py  timer.py  utility_widgets.py  workspace.py
pyautolab/core/utils/: conf.py  plugin_helpers.py  qt_helpers.py  system.py
pyautolab/core/widgets/: combobox.py  device_manager.py  plot_widget.py  status.py  table.py  timer.py  utility_widgets.py  workspace.py
pyautolab/core/widgets/tabs/: plugin_manager.py  settings_tab.py
pyautolab/create_installer/: __main__.py  pyautolab.spec  template.nsi
pyautolab/plugins/monitor/: configuration.json  main.py  widget.py  worker.py
pyautolab/plugins/runner/: configuration.json  default_run_conf.json  main.py  run_conf.py  runner.py  worker.py
pyautolab/plugins/runner/tabs/: analysis_tab.py  conf_tab.py
tests/: test_mainwindow.py
